--- a/recipe_sharing/base/templates/base.html
+++ b/recipe_sharing/base/templates/base.html
@@ -8,31 +8,59 @@
 </head>
 <body class="bg-gray-100 font-sans">
 
-<!-- Navigation Bar -->
-<nav class="bg-blue-500 p-4">
-    <div class="container mx-auto">
-        <h1 class="text-white text-2xl font-semibold"><a href="{% url 'base:index' %}">My Website</a></h1>
-        <!-- Add navigation links here -->
+
+
+<nav class="py-6 px-6 flex justify-between items-center border-b border-teal-200 bg-gray-900 text-gray-100 ">
+    <a href="/" class="text-xl font-semibold  w-1/3">Recipe Sharing</a>
+
+    <div class="space-x-10 flex w-2/3 justify-between" >
+        {% if request.user.is_authenticated %}
+
+            <div>
+                <a href="" class="px-6 py-3 text-lg font-semibold bg-teal-500  rounded-xl hover:text-gray-500 bg-teal-700 text-white">New recipe</a>
+                <a href="" class="px-6 py-3 text-lg font-semibold bg-teal-500  rounded-xl hover:text-gray-500 bg-teal-700 text-white">Browse</a>
+                <a href="" class="px-6 py-3 text-lg font-semibold bg-teal-500  rounded-xl hover:text-gray-500 bg-teal-700 text-white">Inbox</a>
+                <a href="{% url 'base:index' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500  rounded-xl hover:text-gray-500 bg-teal-700 text-white">Dashboard</a>
+            </div>
+
+            <div>
+                <a href="{% url 'base:logout' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 rounded-xl hover:text-gray-900 bg-gray-700 text-white">Logout</a>
+            </div>
+
+        {% else %}
+            <div class="ml-auto">
+                <a href="{% url 'base:register' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500  rounded-xl hover:bg-teal-700 bg-teal-700 text-white">Register</a>
+                <a href="{% url 'base:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 rounded-xl hover:bg-gray-700 bg-gray-700 text-white">Log in</a>
+            </div>
+        {% endif %}
     </div>
 </nav>
 
+
+
+
 <!-- Main Content -->
-<div class="container mx-auto p-4">
-    <div class="bg-white p-6 rounded-lg shadow-lg">
-        {% block content %}
-            <!-- Content for child templates will go here -->
-        {% endblock %}
-    </div>
+<div class="px-6 py-6">
+    {% block content %}
+        <!-- Content for child templates will go here -->
+    {% endblock %}
 </div>
 
 
 
-<!-- Footer -->
-<footer class="bg-gray-300 p-4">
-    <div class="container mx-auto">
-        <p class="text-center text-gray-600">© {{ year }} My Website</p>
+{% comment %} <footer class="py-2 px-6 flex justify-between bg-gray-900 text-gray-100">
+    <div class="w-2/3">
+        <h3 class="mb-5 font-semibold text-gray-100">About</h3>
+        <!-- Content for the left side of the footer -->
     </div>
-</footer>
+
+    <div class="w-1/3 justify-items-end">
+        <ul>
+            <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Term of use</a></li>
+        </ul>
+    </div>
+</footer> {% endcomment %}
+
 
 </body>
 </html>
