--- a/recipe_sharing/base/templates/index.html
+++ b/recipe_sharing/base/templates/index.html
@@ -4,15 +4,9 @@
 {% block content %}
    <h1 class='text-lg' > Hello World!</h1>
    {% if request.user.is_authenticated %}
-   <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
-      <div class="space-x-6">
-         <h1 class='text-lg' > Welcome Back</h1>
-         <a href="{% url 'base:logout' %}" class="text-lg font-semibold hover:text-gray-500">Logout</a>
-      </div>
-   </nav>
+      <h1 class='text-lg' > Welcome Back {{request.user.username}}.</h1>
    {% else %}
-      <a href="{% url 'base:login' %}">Login</a>
-
+      <h1 class='text-lg' >You are not authenticated. Log in or register.</h1>
    {% endif %}
-   <a href="{% url 'base:register' %}" class="px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-blue-700">Register</a>
+
 {% endblock %}
