--- a/recipe_sharing/base/templates/login.html
+++ b/recipe_sharing/base/templates/login.html
@@ -2,30 +2,48 @@
 
 {% block content %}
 
-<form method="post" action=''>
-    {% csrf_token %}
 
-    <div class="w-1/2 my-6 mx-auto p-6 bg-gray-100 rounded-xl">
-        <h1 class="mb-6 text-3xl">Log in</h1>
-        <div class="mb-3">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required><br>
+<div class="flex items-center ">
+    <div class=" w-full mx-auto max-w-md p-6 rounded-md sm:p-10  bg-gray-900  text-gray-100">
+        <div class="mb-8 text-center">
+            <h1 class="my-3 text-4xl font-bold">Login</h1>
+            <p class="text-sm  text-gray-400">Log in to access your account</p>
         </div>
+        <form method="post" action="" class="space-y-12">
+            {% csrf_token %}
+            <div class="space-y-4">
+                <div>
+                    <label for="username" class="block mb-2 text-sm">Username</label>
+                    <input type="text" id="username" name="username" placeholder="John Smith..." class="w-full px-3 py-2 border rounded-md  border-gray-700  bg-gray-900  text-gray-100" required>
+                </div>
+                <div>
+                    <div class="flex justify-between mb-2">
+                        <label for="password" class="text-sm">Password</label>
 
-        <div class="mb-3">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br>
-        </div>
-
-        {% for message in messages %}
-            <div class="mb-3 p-3 bg-red-100 rounded-xl">
-                {{ message }}
+                    </div>
+                    <input type="password" id="password" name="password" placeholder="*****" class="w-full px-3 py-2 border rounded-md  border-gray-700  bg-gray-900  text-gray-100" required>
+                </div>
             </div>
-        {% endfor %}
+            <div class="space-y-2">
+                <div>
+                    <button type="submit" class="w-full px-8 py-3 font-semibold rounded-md  bg-blue-400  text-gray-900">Log in</button>
+                </div>
+                <p class="px-6 py-2 text-sm text-center  text-gray-400">Don't have an account yet?
+                    <a rel="noopener noreferrer" href="{% url 'base:register' %}" class="hover:underline  text-blue-400">Register</a>.
+                </p>
+            </div>
+        </form>
 
-        <button class="py-4 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white" type="submit">Login</button>
+        <div class="space-y-2">
+            {% for message in messages %}
+                <div class="mb-3 mt-10 p-3 bg-red-500 rounded-xl">
+                    {{ message }}</li>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-</form>
+</div>
+
 
 
 {% endblock %}
