--- a/recipe_sharing/base/templates/registration.html
+++ b/recipe_sharing/base/templates/registration.html
@@ -1,44 +1,68 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="mb-6 text-2xl">User Registration</h1>
 
 
-    <form method="post" action="">
-        {% csrf_token %}
-        <div class="mb-3">
-            <label class="inline-block mb-2">Username</label><br>
-            {{ form.username }}
+<div class="flex items-center  ">
+    <div class="w-full mx-auto max-w-md p-6 rounded-md sm:p-10  bg-gray-900  text-gray-100">
+        <div class="mb-8 text-center">
+            <h1 class="my-3 text-4xl font-bold">User Registration</h1>
         </div>
+        <form method="post" action="" class="space-y-12">
+            {% csrf_token %}
+            <div class="space-y-4">
 
+                <div>
+                    <label class="inline-block mb-2">Username</label><br>
+                    {{ form.username }}
+                </div>
 
-        <div class="mb-3">
-            <label class="inline-block mb-2">E-Mail</label><br>
-            {{ form.email }}
-        </div>
+                <div>
+                    <label class="inline-block mb-2">E-Mail</label><br>
+                    {{ form.email }}
+                </div>
 
-        <div class="mb-3">
-            <label class="inline-block mb-2">Password</label><br>
-            {{ form.password1 }}
-        </div>
+                <div>
+                    <label for="password" class="text-sm">Password</label>
+                    {{ form.password1 }}
+                </div>
 
-        <div class="mb-3">
-            <label class="inline-block mb-2">Repeat Password</label><br>
-            {{ form.password2 }}
-        </div>
-
-        {% if form.errors or form.non_field_errors %}
-            <div class="mb-3 p-6 bg-red-100 rounded-xl">
-                {% for field in form %}
-                    {{ field.errors }}
-                {% endfor %}
-
-                {{ form.non_field_errors }}
+                <div>
+                    <label class="inline-block mb-2">Repeat Password</label><br>
+                    {{ form.password2 }}
+                </div>
             </div>
-        {% endif %}
+            <div class="space-y-2">
+                <div>
+                    <button type="submit" class="w-full px-8 py-3 font-semibold rounded-md  bg-blue-400  text-gray-900">Register</button>
+                </div>
+            </div>
 
-         <button class="py-4 px-8 text-lg bg-green-500 hover:bg-green-700 rounded-xl text-white">Register</button>
-    </form>
+            {% if form.errors or form.non_field_errors %}
+                <div class="mb-3 p-6 bg-red-500 rounded-xl">
+                    {% for formField in form %}
+                        {% for fieldError in formField.errors %}
+                            <li>{{ fieldError }}</li>
+                        {% endfor %}
+                    {% endfor %}
+
+                    {% for nonFieldError in form.non_field_errors %}
+                        <li>{{ nonFieldError }}</li>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </form>
+
+
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 
     
 {% endblock %}
