add short description field to recipe model and improve recipe browsing page

--- a/recipe/templates/create_recipe.html
+++ b/recipe/templates/create_recipe.html
@@ -16,6 +16,10 @@
             {{ form.category }}
           </div>
           <div class="col-span-full">
+            <label for="{{ form.short_description.id_for_label }}" class="text-sm">Short description</label>
+            {{ form.short_description }}
+          </div>
+          <div class="col-span-full">
             <label for="{{ form.ingredients.id_for_label }}" class="text-sm">Ingredients</label>
             {{ form.ingredients }}
           </div>
