--- a/recipe/templates/recipe_details.html
+++ b/recipe/templates/recipe_details.html
@@ -4,11 +4,11 @@
 
 
 
-<div class="flex justify-center ">
+<div class="flex justify-center flex-col justify-center items-center">
     <div class="flex max-w-screen-md  flex-col  justify-center bg-white p-10  rounded-lg shadow-md">
 
         <!-- Recipe name -->
-        <div class="flex justify-center">
+        <div class="flex justify-center mb-10">
             <h2 class="text-3xl font-bold mb-4 text-gray-900 ">{{ recipe.name }}</h2>
         </div>
 
@@ -45,8 +45,21 @@
                 {% endfor %}
             </ul>
         </div>
+    
+
+          
 
     </div>
+
+     <!-- Buttons -->
+    <div class="mt-6 flex flex-row text-center ">
+        <a href={% url 'recipe:edit' recipe.id  %} class="w-28 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded">
+          Edit
+        </a>
+        <a class=" w-28 ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-red-700 rounded ">
+          Delete
+        </a>
+      </div>
 </div>
   
   
