--- a/recipe/templates/recipe_details.html
+++ b/recipe/templates/recipe_details.html
@@ -56,7 +56,7 @@
         <a href={% url 'recipe:edit' recipe.id  %} class="w-28 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded">
           Edit
         </a>
-        <a class=" w-28 ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-red-700 rounded ">
+        <a href={% url 'recipe:delete' recipe.id %} class=" w-28 ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-red-700 rounded ">
           Delete
         </a>
       </div>
