--- a/base/templates/login.html
+++ b/base/templates/login.html
@@ -37,7 +37,7 @@
         <div class="space-y-2">
             {% for message in messages %}
                 <div class="mb-3 mt-10 p-3 bg-red-500 rounded-xl">
-                    {{ message }}</li>
+                    <li class="list-none">{{ message }}</li>
                 </div>
             {% endfor %}
         </div>
