--- a/recipe/templates/recipe_details.html
+++ b/recipe/templates/recipe_details.html
@@ -8,9 +8,27 @@
     <div class="flex max-w-screen-md  flex-col  justify-center bg-white p-10  rounded-lg shadow-md">
 
         <!-- Recipe name -->
-        <div class="flex justify-center mb-10">
-            <h2 class="text-3xl font-bold mb-4 text-gray-900 ">{{ recipe.name }}</h2>
+        <div class="flex justify-between items-center mb-10 w-full">
+            <div class="flex-grow text-center">
+                <h2 class="text-3xl font-bold text-gray-900">{{ recipe.name }}</h2>
+            </div>
+
+            <!-- Add to Favorites Button, align to the right -->
+        <form class="flex-end" method="post" action="{% if is_favorite %}{% url 'recipe:remove_from_favorites' recipe.id %}{% else %}{% url 'recipe:add_to_favorites' recipe.id %}{% endif %}">
+            {% csrf_token %}
+            <button type="submit" class="bg-transparent border-none" title="{% if is_favorite %}Remove from favorites{% else %}Add to favorites{% endif %}">
+                {% if is_favorite %}
+                    <!-- Full heart for favorited recipe -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-red-500 hover:text-red-700" fill="currentColor" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+                {% else %}
+                    <!-- Empty heart for non-favorited recipe -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-red-500 hover:text-red-700" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                {% endif %}
+            </button>
+        </form>
+
         </div>
+
 
         <!-- Recipe details -->
         <div class="flex flex-col ">
