--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Website{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    {% block extrahead %}{% endblock %} <!--    head elements to be added in files that extend this template-->
 </head>
 <body class="bg-gray-100 font-sans">
 
 
 
 <nav class="py-6 px-6 flex justify-between items-center border-b border-teal-200 bg-gray-900 text-gray-100 ">
-    <a href="/" class="text-xl font-semibold  w-1/3">Recipe Sharing</a>
+    <a href="{% url 'recipe:carousel' %}" class="text-xl font-semibold  w-1/3">Recipe Sharing</a>
 
     <div class="space-x-10 flex w-2/3 justify-between" >
         {% if request.user.is_authenticated %}
@@ -61,6 +62,7 @@
     </div>
 </footer> {% endcomment %}
 
-
+<!--extra js to be added in files that extend this template-->
+{% block extrajs %}{% endblock %}
 </body>
 </html>
